@@ -6,6 +6,8 @@ import com.eipl.amcs.controls.alert.ErrorAlert;
 import com.eipl.amcs.controls.alert.InformationAlert;
 import com.eipl.amcs.controls.alert.MyAlert;
 import com.eipl.amcs.controls.convertor.LocalDateConvertor;
+import com.eipl.amcs.exception.apierror.ApiError;
+import com.eipl.amcs.exception.apierror.ApiValidationError;
 import com.eipl.amcs.master.global.convertor.MilkQualityConvertor;
 import com.eipl.amcs.master.global.convertor.MilkTypeConvertor;
 import com.eipl.amcs.master.global.convertor.ShiftConvertor;
@@ -13,16 +15,16 @@ import com.eipl.amcs.master.global.model.MilkQualityType;
 import com.eipl.amcs.master.global.model.MilkType;
 import com.eipl.amcs.master.global.model.RateType;
 import com.eipl.amcs.master.global.model.Shift;
-import com.eipl.amcs.master.global.service.MilkQualityTypeService;
-import com.eipl.amcs.master.global.service.MilkTypeService;
-import com.eipl.amcs.master.global.service.RateTypeService;
-import com.eipl.amcs.master.global.service.ShiftService;
+import com.eipl.amcs.master.global.task.MilkQualityTypeLoadTask;
+import com.eipl.amcs.master.global.task.MilkTypeLoadTask;
+import com.eipl.amcs.master.global.task.RateTypeLoadTask;
+import com.eipl.amcs.master.global.task.ShiftLoadTask;
 import com.eipl.amcs.master.procurement.dto.PurchaseRateGenerate;
 import com.eipl.amcs.master.procurement.dto.SocietyMilkPurchaseRateDto;
 import com.eipl.amcs.master.procurement.model.SocietyMilkPurchaseRate;
 import com.eipl.amcs.master.procurement.model.SocietyMilkPurchaseRateApplicability;
 import com.eipl.amcs.master.procurement.model.SocietyMilkPurchaseRateDetail;
-import com.eipl.amcs.master.procurement.service.SocietyMilkPurchaseRateService;
+import com.eipl.amcs.master.procurement.task.SocietyMilkPurchaseRateSaveTask;
 import com.eipl.amcs.utils.CommonUtils;
 import javafx.beans.property.SimpleDoubleProperty;
 import javafx.beans.property.SimpleStringProperty;
@@ -50,13 +52,13 @@ import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
-import static com.eipl.amcs.MainApp.context;
-
 public class SocietyMilkPurchaseRateAddEditController implements MyInitialization {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(SocietyMilkPurchaseRateAddEditController.class);
     private final int SCALE = 2;
     private final RoundingMode RATE_ROUND = RoundingMode.HALF_UP;
+    private final Map<Integer, List<PurchaseRateGenerate>> mapTableData = new HashMap<>();
+    private final List<SocietyMilkPurchaseRateDetail> listDetails = new ArrayList<>();
     @FXML
     private Button btnBrowse, btnClose, btnSaveUpdate;
     @FXML
@@ -81,23 +83,8 @@ public class SocietyMilkPurchaseRateAddEditController implements MyInitializatio
     private List<MilkQualityType> listMilkQualityType;
     private List<RateType> listRateType;
     private RateType rateType;
-    private Map<Integer, List<PurchaseRateGenerate>> mapTableData = new HashMap<>();
     private StringBuilder errorMsg = null;
-    private List<SocietyMilkPurchaseRateDetail> listDetails = new ArrayList<>();
     private SocietyMilkPurchaseRateDto dto = null;
-    private SocietyMilkPurchaseRateService societyMilkPurchaseRateService;
-    private ShiftService shiftService;
-    private MilkTypeService milkTypeService;
-    private MilkQualityTypeService milkQualityTypeService;
-    private RateTypeService rateTypeService;
-
-    public SocietyMilkPurchaseRateAddEditController() {
-        societyMilkPurchaseRateService = context.getBean(SocietyMilkPurchaseRateService.class);
-        shiftService = context.getBean(ShiftService.class);
-        milkTypeService = context.getBean(MilkTypeService.class);
-        milkQualityTypeService = context.getBean(MilkQualityTypeService.class);
-        rateTypeService = context.getBean(RateTypeService.class);
-    }
 
     @Override
     public Node getRoot() {
@@ -174,25 +161,47 @@ public class SocietyMilkPurchaseRateAddEditController implements MyInitializatio
                 .collect(Collectors.toList());
 
         dto.setPurchaseRate(rate);
-        dto.setListApplicability(Arrays.asList(app));
+        dto.setListApplicability(List.of(app));
         dto.setListDetail(list);
     }
 
     @Override
     public void saveData() {
-        try {
-            societyMilkPurchaseRateService.savePurchaseRate(dto);
+        var task = new SocietyMilkPurchaseRateSaveTask(dto);
+        task.setOnSucceeded(e -> {
+            try {
+                Object obj = task.get();
+                if (obj instanceof ApiError) {
+                    ApiError error = (ApiError) obj;
+                    StringBuilder sb = new StringBuilder();
 
-            MyAlert alert = new InformationAlert(MainApp.getStage(), resourceBundle.getString("societymilkpurchaserate"),
-                    resourceBundle.getString("rate.insert.successful"));
+                    for (ApiValidationError subError : error.getSubErrors()) {
+                        sb.append(subError.getMessage() + "\n");
+                    }
+                    MyAlert alert = new ErrorAlert(MainApp.getStage(), resourceBundle.getString("societymilkpurchaserate"),
+                            sb.toString());
+                    alert.createAlert();
+                    return;
+                }
+
+                if (obj instanceof String) {
+                    MyAlert alert = new InformationAlert(MainApp.getStage(), resourceBundle.getString("societymilkpurchaserate"),
+                            resourceBundle.getString("rate.insert.successful"));
+                    alert.createAlert();
+
+                    // Close window
+                    MainApp.getContentPane().setCenter(MainApp.getFxmlLoaderUtil().load(MainApp.class.getResource("view/master/procurement/SocietyMilkPurchaseRate.fxml")));
+                }
+            } catch (InterruptedException | ExecutionException ex) {
+                ex.printStackTrace();
+            }
+        });
+        task.setOnFailed(e -> {
+            MyAlert alert = new ErrorAlert(MainApp.getStage(), resourceBundle.getString("societymilkpurchaserate"),
+                    task.getException().getMessage());
             alert.createAlert();
-
-            // Close window
-            MainApp.getContentPane().setCenter(MainApp.getFxmlLoaderUtil().load(MainApp.class.getResource("view/master/procurement/SocietyMilkPurchaseRate.fxml")));
-
-        } catch (Exception ex) {
-            ex.printStackTrace();
-        }
+        });
+        new Thread(task).start();
     }
 
     private void loadRateFromExcel() {
@@ -262,28 +271,55 @@ public class SocietyMilkPurchaseRateAddEditController implements MyInitializatio
 
     @Override
     public void loadData() {
-        // ASYNC
-        try {
-            List<Shift> list = shiftService.findAll();
-            if (list != null) {
-                cboxShiftApp.setItems(FXCollections.observableList(list));
-                List<Shift> listShift = CommonUtils.removeAllShift(list);
-                cboxShift.setItems(FXCollections.observableList(listShift));
+        var task = new ShiftLoadTask();
+        task.setOnSucceeded(e -> {
+            try {
+                List<Shift> list = task.get();
+                if (list != null) {
+                    cboxShiftApp.setItems(FXCollections.observableList(list));
+                    List<Shift> listShift = CommonUtils.removeAllShift(list);
+                    cboxShift.setItems(FXCollections.observableList(listShift));
+                }
+            } catch (InterruptedException | ExecutionException ex) {
+                ex.printStackTrace();
             }
+        });
+        new Thread(task).start();
 
-            listMilkType = milkTypeService.findAll();
-            if (listMilkType != null)
-                cboxMilkType.setItems(FXCollections.observableList(listMilkType));
+        var task2 = new MilkTypeLoadTask();
+        task2.setOnSucceeded(e -> {
+            try {
+                listMilkType = task2.get();
+                if (listMilkType != null)
+                    cboxMilkType.setItems(FXCollections.observableList(listMilkType));
+            } catch (InterruptedException | ExecutionException ex) {
+                ex.printStackTrace();
+            }
+        });
+        new Thread(task2).start();
 
-            listMilkQualityType = milkQualityTypeService.findAll();
-            if (listMilkQualityType != null)
-                cboxMilkQualityType.setItems(FXCollections.observableList(listMilkQualityType));
-            cboxMilkQualityType.getSelectionModel().select(0);
+        var task3 = new MilkQualityTypeLoadTask();
+        task3.setOnSucceeded(e -> {
+            try {
+                listMilkQualityType = task3.get();
+                if (listMilkQualityType != null)
+                    cboxMilkQualityType.setItems(FXCollections.observableList(listMilkQualityType));
+                cboxMilkQualityType.getSelectionModel().select(0);
+            } catch (InterruptedException | ExecutionException ex) {
+                ex.printStackTrace();
+            }
+        });
+        new Thread(task3).start();
 
-            listRateType = rateTypeService.findAll();
-        } catch (Exception ex) {
-            ex.printStackTrace();
-        }
+        var task4 = new RateTypeLoadTask();
+        task4.setOnSucceeded(e -> {
+            try {
+                listRateType = task4.get();
+            } catch (InterruptedException | ExecutionException ex) {
+                ex.printStackTrace();
+            }
+        });
+        new Thread(task4).start();
     }
 
 
@@ -294,12 +330,12 @@ public class SocietyMilkPurchaseRateAddEditController implements MyInitializatio
             listDetails.clear();
 
             String fileExtension = CommonUtils.getFileExtension(selectedFile);
-            if (fileExtension == null || !"xls".equalsIgnoreCase(fileExtension))
+            if (!"xls".equalsIgnoreCase(fileExtension))
                 throw new IllegalArgumentException("Invalid Rate File");
 
             Workbook workbook = new HSSFWorkbook(new FileInputStream(selectedFile));
             for (int i = 0; i < workbook.getNumberOfSheets(); i++) {
-                String arr[] = workbook.getSheetName(i).split("-");
+                String[] arr = workbook.getSheetName(i).split("-");
                 Integer quality = arr[1].equalsIgnoreCase("good") ? 1 : arr[1].equalsIgnoreCase("sour") ? 2 : 3;
                 List<SocietyMilkPurchaseRateDetail> listDtl = new ArrayList<>();
                 BigDecimal minFat = new BigDecimal(100);
@@ -332,20 +368,20 @@ public class SocietyMilkPurchaseRateAddEditController implements MyInitializatio
                                     .findAny().orElseThrow(() -> new IllegalArgumentException("Invalid Rate Type"));
                             firstCell = false;
                         } else if (firstRow && !firstCell) {
-                            BigDecimal snf = new BigDecimal(cell.getNumericCellValue()).setScale(SCALE, RATE_ROUND);
+                            BigDecimal snf = BigDecimal.valueOf(cell.getNumericCellValue()).setScale(SCALE, RATE_ROUND);
                             minSnf = minSnf.min(snf);
                             maxSnf = maxSnf.max(snf);
                             LOGGER.info("SNF Value {} at [{}, {}]", snf, cell.getRowIndex(), cell.getColumnIndex());
                             listSnf.add(snf);
                         } else if (!firstRow && firstCell) {
-                            fat = new BigDecimal(cell.getNumericCellValue()).setScale(SCALE, RATE_ROUND);
+                            fat = BigDecimal.valueOf(cell.getNumericCellValue()).setScale(SCALE, RATE_ROUND);
                             minFat = minFat.min(fat);
                             maxFat = maxFat.max(fat);
                             listFat.add(fat);
                             LOGGER.info("FAT Value {} at [{}, {}]", fat, cell.getRowIndex(), cell.getColumnIndex());
                             firstCell = false;
                         } else {
-                            BigDecimal rtpl = new BigDecimal(cell.getNumericCellValue()).setScale(SCALE, RATE_ROUND);
+                            BigDecimal rtpl = BigDecimal.valueOf(cell.getNumericCellValue()).setScale(SCALE, RATE_ROUND);
                             LOGGER.info("RTPL Value {} at index[{}, {}] and Quality[{}, {}]", rtpl, cell.getRowIndex(), cell.getColumnIndex(),
                                     fat, listSnf.get(index));
 
